--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -32,7 +32,8 @@
 
 ### 数据库
  * [greenrobot/greenDAO](https://github.com/greenrobot/greenDAO)——greenDAO is a light & fast ORM solution for Android that maps objects to SQLite databases. http://greenrobot.org/greendao/
- 
+ * [j256/ormlite-android](https://github.com/j256/ormlite-android)——ORMLite Android functionality used in conjunction with ormlite-core http://ormlite.com/http://greenrobot.org/greendao/
+
 ### 动画
  * [JakeWharton/NineOldAndroids](https://github.com/JakeWharton/NineOldAndroids)——[DEPRECATED] Android library for using the Honeycomb animation API on all versions of the platform back to 1.0! http://nineoldandroids.com
  * [nhaarman/ListViewAnimations](https://github.com/nhaarman/ListViewAnimations)——An Android library which allows developers to easily add animations to ListView items
@@ -63,13 +64,20 @@
  * [promeG/TinyPinyin](https://github.com/promeG/TinyPinyin)——适用于Java和Android的快速、低内存占用的汉字转拼音库。(updating) http://www.jianshu.com/p/72494773aace
  * [yanzhenjie/AndPermission](https://github.com/yanzhenjie/AndPermission)——Android Permission = AndPermission. Android运行时权限管理最佳实践。 http://blog.csdn.net/yanzhenjie1003/a…(updating) http://www.jianshu.com/p/72494773aace
  * [googlesamples/easypermissions](https://github.com/googlesamples/easypermissions)——Simplify Android M system permissions
+ * [hongyangAndroid/AndroidAutoLayout](https://github.com/hongyangAndroid/AndroidAutoLayout)——Android屏幕适配方案，直接填写设计图上的像素尺寸即可完成适配，最大限度解决适配问题。
+ * [GavinCT/AndroidMultiChannelBuildTool](https://github.com/GavinCT/AndroidMultiChannelBuildTool)——安卓多渠道打包工具
+ * [nukc/ApkMultiChannelPlugin](https://github.com/nukc/ApkMultiChannelPlugin)——Android 多渠道打包的 Android Studio / IDEA 插件
 
 ### UI
+
+#### RecyclerView
  * [Jude95/EasyRecyclerView](https://github.com/Jude95/EasyRecyclerView)——ArrayAdapter,pull to refresh,auto load more,Header/Footer,EmptyView,ProgressView,ErrorView , RecyclerView, GridView and SwipeRefreshLayout.
  * [jianghejie/XRecyclerView](https://github.com/jianghejie/XRecyclerView)——a RecyclerView that implements pullrefresh and loadingmore featrues.you can use it like a standard RecyclerView , RecyclerView, GridView and SwipeRefreshLayout.
 
+#### 下拉刷新
  * [Chanven/CommonPullToRefresh](https://github.com/Chanven/CommonPullToRefresh)——Android widget with pull to refresh for all the views,and support loadMore for ListView , RecyclerView, GridView and SwipeRefreshLayout.
  * [liaohuqiu/android-Ultra-Pull-To-Refresh](https://github.com/liaohuqiu/android-Ultra-Pull-To-Refresh)——Ultra Pull to Refresh for Android. Support all the views.
+ * [liaoinstan/SpringView](https://github.com/liaoinstan/SpringView)——A custom view can pull up and down,support ScrollView,ListView,RecyclerView,WebView and all another views, easy to use
 
  * [ogaclejapan/SmartTabLayout](https://github.com/ogaclejapan/SmartTabLayout)——A custom ViewPager title strip which gives continuous feedback to the user when scrolling
 
@@ -80,5 +88,10 @@
  * [jeasonlzy/PullZoomView](https://github.com/jeasonlzy/PullZoomView)——类似QQ空间，新浪微博个人主页下拉头部放大的布局效果，支持ListView，GridView，ScrollView，WebView，RecyclerView，以及其他的任意View和ViewGroup。支持头部视差动画，阻尼下拉放大，滑动过程监听。
  * [yanzhenjie/SwipeRecyclerView](https://github.com/yanzhenjie/SwipeRecyclerView)——RecyclerView侧滑菜单，长按拖拽，滑动删除，自动加载更多，和ViewPager结合使用，和任何下拉刷新框架结合使用。 http://blog.csdn.net/yanzhenjie1003/a…
  * [gjiazhe/WaveSideBar](https://github.com/gjiazhe/WaveSideBar)——An Index Side Bar With Wave Effect http://blog.csdn.net/yanzhenjie1003/a…
+ * [githubwing/ByeBurger](https://github.com/githubwing/ByeBurger)——极其简便的快速实现滑动隐藏标题栏和导航栏
 
-
+#### 流式布局
+ * [blazsolar/FlowLayout](https://github.com/blazsolar/FlowLayout)——Android implementation of FlowLayout. Layout arranges its children in multiple rows depending on their width. http://blaz.solar/FlowLayout
+ * [ApmeM/android-flowlayout](https://github.com/ApmeM/android-flowlayout)——Linear layout, that wrap its content to the next line if there is no space in the current line.
+ * [nex3z/FlowLayout](https://github.com/nex3z/FlowLayout)——A flow layout for Android with auto-spacing.
+ * [hongyangAndroid/FlowLayout)](https://github.com/hongyangAndroid/FlowLayout)——Android流式布局，支持单选、多选等，适合用于产品标签等。
