--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -34,4 +34,12 @@
  * [code-reader](https://github.com/loopeer/code-reader) - One Multi program language code reader
  * [githubwing/GankClient-Kotlin](https://github.com/githubwing/GankClient-Kotlin) - gank.io kotlin实现的干货集中营Android客户端 Kotlin Dagger Databinding Rxjava Retrofit Okhttp3
  * [youlookwhat/CloudReader](https://github.com/youlookwhat/CloudReader) - 云阅：一款基于网易云音乐UI，使用Gank.Io及豆瓣api开发的符合Google Material Design的Android开源项目。项目采取的是MVVM-DataBinding架构开发，现主要包括：干货区、电影区和书籍区三个子模块。DIY网易云音乐原来是如此Cool~ https://github.com/youlookwhat/CloudR…
+ * [HuTianQi/QQ](https://github.com/HuTianQi/QQ) - 一款高仿腾讯QQ的IM软件，主UI框架采用侧滑菜单+底部导航的方式，核心聊天功能基于bmob SDK，已经实现文本，表情，图片，位置，语音等信息的发送
+ * [HuTianQi/YingBeautyNote](https://github.com/HuTianQi/YingBeautyNote) - 一款类似印象笔记的App，随时记录您的生活点滴，欢迎大家follow，star与fork。
+ * [a371166028/likequanmintv](https://github.com/a371166028/likequanmintv) - 基于MVP的Retrofit2(okhttp3)+rxjava+dagger2+greendao+glide+rtmp直播。该项目系仿全民TV,属于独立开发者作品,仅供参考学习，拒绝做一切商业用途，如有侵权，请告知删除
+ * [GitLqr/LQRWeChat](https://github.com/GitLqr/LQRWeChat) - 本项目高仿微信6.3.31，使用网易云信SDK 3.2.0版本完成主要的聊天功能（单聊、群聊）、好友关系管理、群组管理等功能。
+ * [BaronZ88/MinimalistWeather](https://github.com/BaronZ88/MinimalistWeather) - Android 平台开源天气 App，采用 MVP、RxJava、Retrofit2、OKHttp3、Dagger2、RetroLambda 等开源库来实现。 https://zhuanlan.zhihu.com/baron
+ * [geeeeeeeeek/WeChatLuckyMoney](https://github.com/geeeeeeeeek/WeChatLuckyMoney) -微信抢红包插件
+ * [lendylongli/qianghongbao](https://github.com/lendylongli/qianghongbao) -微信抢红包外挂源码
+ * [wuyinlei/InternetShopping](https://github.com/wuyinlei/InternetShopping) -一个高仿京东商城的购物app，可以学习到5.0新特性。
  *
