--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -39,8 +39,9 @@
  * [nhaarman/ListViewAnimations](https://github.com/nhaarman/ListViewAnimations)——An Android library which allows developers to easily add animations to ListView items
  * [daimajia/AndroidViewAnimations](https://github.com/daimajia/AndroidViewAnimations)——Cute view animation collection.
  * [lgvalle/Material-Animations](https://github.com/lgvalle/Material-Animations)——Android Transition animations explanation with examples.
- * [recyclerview-animators](https://github.com/wasabeef/recyclerview-animators)——Android Transition animations explanation with examples.
- * [lottie-android](https://github.com/airbnb/lottie-android)——Render After Effects animations natively on Android and iOS
+ * [wasabeef/recyclerview-animators](https://github.com/wasabeef/recyclerview-animators)——Android Transition animations explanation with examples.
+ * [airbnb/lottie-android](https://github.com/airbnb/lottie-android)——Render After Effects animations natively on Android and iOS
+ * [miaoyongjun/PageTransformer](https://github.com/miaoyongjun/PageTransformer)——Just invoke setPageTransformer ,An easy to use ViewPager that adds custom animations
 
 ### 视频播放
  * [Bilibili/ijkplayer](https://github.com/Bilibili/ijkplayer)——Android/iOS video player based on FFmpeg n3.2, with MediaCodec, VideoToolbox support.
