--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -1,4 +1,5 @@
 # 项目
+### Java
  * [Afoodie-app](https://github.com/Sambor123/foodie-app) -一款基于LBS的美食发现APP
  * [SearchPictureTool](https://github.com/wenhuaijun/SearchPictureTool) - 图片搜索APP源码，Material Design，Rxjava
  * [iBeebo](https://github.com/andforce/iBeebo) - 第三方新浪微博客户端
@@ -43,3 +44,9 @@
  * [lendylongli/qianghongbao](https://github.com/lendylongli/qianghongbao) -微信抢红包外挂源码
  * [wuyinlei/InternetShopping](https://github.com/wuyinlei/InternetShopping) -一个高仿京东商城的购物app，可以学习到5.0新特性。
  *
+
+### Kotlin
+ * [wuapnjie/PoiShuhui-Kotlin](https://github.com/wuapnjie/PoiShuhui-Kotlin) -一个用Kotlin写的简单漫画APP
+ * [githubwing/GankClient-Kotlin](https://github.com/githubwing/GankClient-Kotlin) -gank.io kotlin实现的干货集中营Android客户端 Kotlin Dagger Databinding Rxjava Retrofit Okhttp3
+ * [blackbbc/Tucao](https://github.com/blackbbc/Tucao) -http://www.tucao.tv/ 吐槽第三方Android客户端
+ * [blackbbc/Evil-Hide](https://github.com/blackbbc/Evil-Hide) -An android app that can hide other apps' icon in the launcher without root permission. 一个用于隐藏应用的app（不需要Root权限）
