--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -68,6 +68,11 @@
  * [hongyangAndroid/AndroidAutoLayout](https://github.com/hongyangAndroid/AndroidAutoLayout)——Android屏幕适配方案，直接填写设计图上的像素尺寸即可完成适配，最大限度解决适配问题。
  * [GavinCT/AndroidMultiChannelBuildTool](https://github.com/GavinCT/AndroidMultiChannelBuildTool)——安卓多渠道打包工具
  * [nukc/ApkMultiChannelPlugin](https://github.com/nukc/ApkMultiChannelPlugin)——Android 多渠道打包的 Android Studio / IDEA 插件
+ * [yadav-rahul/TastyToast](https://github.com/yadav-rahul/TastyToast)—— Make your native android Toasts Tasty
+ * [Muddz/StyleableToast](https://github.com/Muddz/StyleableToast)—— A library that takes the standard Android toast to the next level with a variety of styling options. Style your toast either from code or styles.xml
+ 
+ * [chrisjenx/Calligraphy](https://github.com/chrisjenx/Calligraphy)—— Custom fonts in Android the easy way...
+ * [crazycodeboy/TakePhoto](https://github.com/crazycodeboy/TakePhoto)—— 一款用于在Android设备上获取照片（拍照或从相册、文件中选择）、裁剪图片、压缩图片的开源工具库 http://www.devio.org/tags/#TakePhoto
 
 ### UI
 
