--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -43,6 +43,9 @@
  * [geeeeeeeeek/WeChatLuckyMoney](https://github.com/geeeeeeeeek/WeChatLuckyMoney) -微信抢红包插件
  * [lendylongli/qianghongbao](https://github.com/lendylongli/qianghongbao) -微信抢红包外挂源码
  * [wuyinlei/InternetShopping](https://github.com/wuyinlei/InternetShopping) -一个高仿京东商城的购物app，可以学习到5.0新特性。
+ * [LRH1993/SmartRecom](https://github.com/LRH1993/SmartRecom) -一款基于行为识别和个性化推荐的智能推荐APP，实时为你推荐音乐和电影，让你的生活更休闲，更精彩！
+ * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
+ * [maoruibin/TranslateApp](https://github.com/maoruibin/TranslateApp) -A translations app without interruptions, copy words and translate directly, show result by top view. http://fir.im/gdTranslater
  *
 
 ### Kotlin
