--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -7,7 +7,8 @@
  * [wyouflf/xUtils3](https://github.com/wyouflf/xUtils3)——android orm, bitmap, http, view inject...
  * [hongyangAndroid/okhttputils](https://github.com/hongyangAndroid/okhttputils)——okhttp的辅助类 http://blog.csdn.net/lmj623565791/art…
  * [yanzhenjie/NoHttp](https://github.com/yanzhenjie/NoHttp)——Android Http标准框架，底层OkHttp，与RxJava完美结合，比Retrofit更简单易用。 http://www.nohttp.net
- * [jeasonlzy/okhttp-OkGo](https://github.com/jeasonlzy/okhttp-OkGo)——OkHttpUtils-2.0.0 升级后改名 OkGo，全新完美支持RxJava，比Retrofit更简单易用。 http://www.nohttp.net
+ * [jeasonlzy/okhttp-OkGo](https://github.com/jeasonlzy/okhttp-OkGo)——OkGo - 3.0震撼来袭，该库是封装了okhttp的标准RESTful风格的网络请求框架，完美支持RxJava，RxJava2，比Retrofit更简单易用。支持自定义缓存数据，扩展了统一的上传管理和下载管理功能
+ * [AriaLyy/Aria](https://github.com/AriaLyy/Aria)——稳当高效的下载框架
  * git clone https://android.googlesource.com/platform/frameworks/volley  compile 'com.mcxiaoke.volley:library:1.0.19'
 
 ### 图片加载
@@ -29,6 +30,17 @@
 
 ### 解耦
  * [greenrobot/EventBus](https://github.com/greenrobot/EventBus)——Android optimized event bus that simplifies communication between Activities, Fragments, Threads, Services, etc. Less code, better quality. http://greenrobot.org/eventbus/
+
+### 图表
+ * [whataa/SuitLines](https://github.com/whataa/SuitLines)——一个小巧且高效的线性图表组件。
+ * [ZuYun/Jgraph](https://github.com/ZuYun/Jgraph)——一个视觉效果还不错的图表控件
+ * [PhilJay/MPAndroidChart](https://github.com/PhilJay/MPAndroidChart)——A powerful Android chart view / graph view library
+ * [xcltapestry/XCL-Charts](https://github.com/xcltapestry/XCL-Charts)——Android图表库(XCL-Charts is a free charting library for Android platform.
+ * [Idtk/SmallChart](https://github.com/Idtk/SmallChart)——开源的Android图表库，拥有折线图、曲线图(可填充)、柱状图、扇形图、雷达图，共5种图表类型。并且可以组合图表。
+
+### 插件化
+ * [Qihoo360/RePlugin](https://github.com/Qihoo360/RePlugin)——RePlugin —— 历经三年多考验，数亿设备使用的，稳定占坑类插件化方案
+ * [didi/VirtualAPK](https://github.com/didi/VirtualAPK)——VirtualAPK是滴滴出行自研的一款优秀的插件化框架
 
 ### 数据库
  * [greenrobot/greenDAO](https://github.com/greenrobot/greenDAO)——greenDAO is a light & fast ORM solution for Android that maps objects to SQLite databases. http://greenrobot.org/greendao/
@@ -56,7 +68,10 @@
 ### RX
  * [ReactiveX/RxJava](https://github.com/ReactiveX/RxJava)——RxJava – Reactive Extensions for the JVM – a library for composing asynchronous and event-based programs using observable sequences for the Java VM.
  * [ReactiveX/RxAndroid](https://github.com/ReactiveX/RxAndroid)——RxJava bindings for Android
+ * [ReactiveX/RxKotlin](https://github.com/ReactiveX/RxKotlin)——RxJava bindings for Kotlin
+ * [JakeWharton/RxBinding](https://github.com/JakeWharton/RxBinding)——RxJava binding APIs for Android's UI widgets.
  * [tbruyelle/RxPermissions](https://github.com/tbruyelle/RxPermissions)——Android runtime permissions powered by RxJava
+ * [Polidea/RxAndroidBle](https://github.com/Polidea/RxAndroidBle)——RxAndroidBle is a powerful painkiller for Android's Bluetooth Low Energy headaches
 
 ### 工具
  * [orhanobut/logger](https://github.com/orhanobut/logger)——Simple, pretty and powerful logger for android
@@ -79,6 +94,7 @@
 #### RecyclerView
  * [Jude95/EasyRecyclerView](https://github.com/Jude95/EasyRecyclerView)——ArrayAdapter,pull to refresh,auto load more,Header/Footer,EmptyView,ProgressView,ErrorView , RecyclerView, GridView and SwipeRefreshLayout.
  * [jianghejie/XRecyclerView](https://github.com/jianghejie/XRecyclerView)——a RecyclerView that implements pullrefresh and loadingmore featrues.you can use it like a standard RecyclerView , RecyclerView, GridView and SwipeRefreshLayout.
+ * [CymChad/BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper)——一个强大的RecyclerAdapter框架，它能节约开发者大量的开发时间，集成了大部分列表常用需求解决方案。
 
 #### 下拉刷新
  * [Chanven/CommonPullToRefresh](https://github.com/Chanven/CommonPullToRefresh)——Android widget with pull to refresh for all the views,and support loadMore for ListView , RecyclerView, GridView and SwipeRefreshLayout.
