--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -53,3 +53,5 @@
  * [githubwing/GankClient-Kotlin](https://github.com/githubwing/GankClient-Kotlin) -gank.io kotlin实现的干货集中营Android客户端 Kotlin Dagger Databinding Rxjava Retrofit Okhttp3
  * [blackbbc/Tucao](https://github.com/blackbbc/Tucao) -http://www.tucao.tv/ 吐槽第三方Android客户端
  * [blackbbc/Evil-Hide](https://github.com/blackbbc/Evil-Hide) -An android app that can hide other apps' icon in the launcher without root permission. 一个用于隐藏应用的app（不需要Root权限）
+ * [550609334/Twobbble](https://github.com/550609334/Twobbble) -这是一个使用Kotlin开发的Dribbble客户端
+ * [fccaikai/Gan_Kotlin](https://github.com/fccaikai/Gan_Kotlin) -使用kotlin编写的Gank客户端。遵循MD设计规范。
