--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -77,6 +77,7 @@
  * [orhanobut/logger](https://github.com/orhanobut/logger)——Simple, pretty and powerful logger for android
  * [ZhaoKaiQiang/KLog](https://github.com/ZhaoKaiQiang/KLog)——这是一个Android专用的LogCat工具，主要功能为打印行号、函数调用、Json解析、XML解析、点击跳转、Log信息保存等功能
  * [Blankj/AndroidUtilCode](https://github.com/Blankj/AndroidUtilCode)——Android developers should collect the following utils(updating) http://www.jianshu.com/p/72494773aace
+ * [AbrahamCaiJin/CommonUtilLibrary](https://github.com/AbrahamCaiJin/CommonUtilLibrary)——快速开发工具类收集
  * [promeG/TinyPinyin](https://github.com/promeG/TinyPinyin)——适用于Java和Android的快速、低内存占用的汉字转拼音库。(updating) http://www.jianshu.com/p/72494773aace
  * [yanzhenjie/AndPermission](https://github.com/yanzhenjie/AndPermission)——Android Permission = AndPermission. Android运行时权限管理最佳实践。 http://blog.csdn.net/yanzhenjie1003/a…(updating) http://www.jianshu.com/p/72494773aace
  * [googlesamples/easypermissions](https://github.com/googlesamples/easypermissions)——Simplify Android M system permissions
@@ -85,6 +86,7 @@
  * [nukc/ApkMultiChannelPlugin](https://github.com/nukc/ApkMultiChannelPlugin)——Android 多渠道打包的 Android Studio / IDEA 插件
  * [yadav-rahul/TastyToast](https://github.com/yadav-rahul/TastyToast)—— Make your native android Toasts Tasty
  * [Muddz/StyleableToast](https://github.com/Muddz/StyleableToast)—— A library that takes the standard Android toast to the next level with a variety of styling options. Style your toast either from code or styles.xml
+ * [alibaba/fastjson](https://github.com/alibaba/fastjson)—— Fastjson是一个Java语言编写的高性能功能完善的JSON库。
  
  * [chrisjenx/Calligraphy](https://github.com/chrisjenx/Calligraphy)—— Custom fonts in Android the easy way...
  * [crazycodeboy/TakePhoto](https://github.com/crazycodeboy/TakePhoto)—— 一款用于在Android设备上获取照片（拍照或从相册、文件中选择）、裁剪图片、压缩图片的开源工具库 http://www.devio.org/tags/#TakePhoto
@@ -97,6 +99,7 @@
  * [CymChad/BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper)——一个强大的RecyclerAdapter框架，它能节约开发者大量的开发时间，集成了大部分列表常用需求解决方案。
 
 #### 下拉刷新
+ * [scwang90/SmartRefreshLayout](https://github.com/scwang90/SmartRefreshLayout)——Android智能下拉刷新框架，支持越界回弹，集成了几十种炫酷的Header和 Footer。 RefreshLayout，OverScroll
  * [Chanven/CommonPullToRefresh](https://github.com/Chanven/CommonPullToRefresh)——Android widget with pull to refresh for all the views,and support loadMore for ListView , RecyclerView, GridView and SwipeRefreshLayout.
  * [liaohuqiu/android-Ultra-Pull-To-Refresh](https://github.com/liaohuqiu/android-Ultra-Pull-To-Refresh)——Ultra Pull to Refresh for Android. Support all the views.
  * [liaoinstan/SpringView](https://github.com/liaoinstan/SpringView)——A custom view can pull up and down,support ScrollView,ListView,RecyclerView,WebView and all another views, easy to use
