--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -46,6 +46,7 @@
  * [LRH1993/SmartRecom](https://github.com/LRH1993/SmartRecom) -一款基于行为识别和个性化推荐的智能推荐APP，实时为你推荐音乐和电影，让你的生活更休闲，更精彩！
  * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
  * [maoruibin/TranslateApp](https://github.com/maoruibin/TranslateApp) -A translations app without interruptions, copy words and translate directly, show result by top view. http://fir.im/gdTranslater
+ * [aliumujib/Orin](https://github.com/aliumujib/Orin) -Orin is a music player based on Karim Abou Zeid's open source Phonograph music player
  *
 
 ### Kotlin
