--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -47,6 +47,9 @@
  * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
  * [maoruibin/TranslateApp](https://github.com/maoruibin/TranslateApp) -A translations app without interruptions, copy words and translate directly, show result by top view. http://fir.im/gdTranslater
  * [aliumujib/Orin](https://github.com/aliumujib/Orin) -Orin is a music player based on Karim Abou Zeid's open source Phonograph music player
+ * [OCNYang/QBox](https://github.com/OCNYang/QBox) -小秋魔盒是一个生活工具 App，主要功能有：新闻资讯；微信精选美文；笑话趣图；星座运势；LED字幕；天气；日历；二维码；手电筒；老黄历。在开发中尽可能多的用了目前比较流行的框架和库。
+ * [yewei02538/TodayNews](https://github.com/yewei02538/TodayNews) -一个仿今日头条的开源项目
+ * [HurTeng/StormPlane](https://github.com/HurTeng/StormPlane) -《沙漠风暴》是一款基于Android开发的纵版飞行射击游戏
  *
 
 ### Kotlin
@@ -56,3 +59,8 @@
  * [blackbbc/Evil-Hide](https://github.com/blackbbc/Evil-Hide) -An android app that can hide other apps' icon in the launcher without root permission. 一个用于隐藏应用的app（不需要Root权限）
  * [550609334/Twobbble](https://github.com/550609334/Twobbble) -这是一个使用Kotlin开发的Dribbble客户端
  * [fccaikai/Gan_Kotlin](https://github.com/fccaikai/Gan_Kotlin) -使用kotlin编写的Gank客户端。遵循MD设计规范。
+ * [a1018875550/ZhihuDaily](https://github.com/a1018875550/ZhihuDaily) -a simple client for ZhiHuDaily with use MVP+Kotlin+anko+dagger2(v2.11+)+rx
+ * [LRH1993/Eyepetizer-in-Kotlin](https://github.com/LRH1993/Eyepetizer-in-Kotlin) -使用Kotlin撸一款Eyepetizer，学习Kotlin语言
+ * [SplashCodes/JAViewer](https://github.com/SplashCodes/JAViewer) -质感设计 更优雅的驾车体验
+ * [Ccixyj/JBusDriver](https://github.com/Ccixyj/JBusDriver) -这是去幼儿园的班车(滑稽
+ 
