--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -76,8 +76,10 @@
 ### 工具
  * [orhanobut/logger](https://github.com/orhanobut/logger)——Simple, pretty and powerful logger for android
  * [ZhaoKaiQiang/KLog](https://github.com/ZhaoKaiQiang/KLog)——这是一个Android专用的LogCat工具，主要功能为打印行号、函数调用、Json解析、XML解析、点击跳转、Log信息保存等功能
+ * [square/leakcanary](https://github.com/square/leakcanary)——A memory leak detection library for Android and Java.
  * [Blankj/AndroidUtilCode](https://github.com/Blankj/AndroidUtilCode)——Android developers should collect the following utils(updating) http://www.jianshu.com/p/72494773aace
  * [AbrahamCaiJin/CommonUtilLibrary](https://github.com/AbrahamCaiJin/CommonUtilLibrary)——快速开发工具类收集
+ * [zxing/zxing](https://github.com/zxing/zxing)——ZXing ("Zebra Crossing") barcode scanning library for Java, Android
  * [promeG/TinyPinyin](https://github.com/promeG/TinyPinyin)——适用于Java和Android的快速、低内存占用的汉字转拼音库。(updating) http://www.jianshu.com/p/72494773aace
  * [yanzhenjie/AndPermission](https://github.com/yanzhenjie/AndPermission)——Android Permission = AndPermission. Android运行时权限管理最佳实践。 http://blog.csdn.net/yanzhenjie1003/a…(updating) http://www.jianshu.com/p/72494773aace
  * [googlesamples/easypermissions](https://github.com/googlesamples/easypermissions)——Simplify Android M system permissions
