--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -50,6 +50,7 @@
  * [OCNYang/QBox](https://github.com/OCNYang/QBox) -小秋魔盒是一个生活工具 App，主要功能有：新闻资讯；微信精选美文；笑话趣图；星座运势；LED字幕；天气；日历；二维码；手电筒；老黄历。在开发中尽可能多的用了目前比较流行的框架和库。
  * [yewei02538/TodayNews](https://github.com/yewei02538/TodayNews) -一个仿今日头条的开源项目
  * [HurTeng/StormPlane](https://github.com/HurTeng/StormPlane) -《沙漠风暴》是一款基于Android开发的纵版飞行射击游戏
+ * [mingjunli/GithubApp](https://github.com/mingjunli/GithubApp) -这个一个非官方的, 开源的, 基于Github Api的的一个Android平台的Github客户端App.
  *
 
 ### Kotlin
