--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -52,6 +52,8 @@
  * [HurTeng/StormPlane](https://github.com/HurTeng/StormPlane) -《沙漠风暴》是一款基于Android开发的纵版飞行射击游戏
  * [mingjunli/GithubApp](https://github.com/mingjunli/GithubApp) -这个一个非官方的, 开源的, 基于Github Api的的一个Android平台的Github客户端App.
  * [TellH/GitClub](https://github.com/TellH/GitClub) -An elegent Android Client for Github. 不仅仅是Github客户端，而且是一个发现优秀Github开源项目的app
+ * [vpaliyX/Melophile](https://github.com/vpaliyX/Melophile) -Music App built using RxJava2, Retrofit2, Dagger2 and clean architecture.
+ * [MinardWu/See](https://github.com/MinardWu/See) -“初见”客户端
  *
 
 ### Kotlin
