--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -54,6 +54,7 @@
  * [TellH/GitClub](https://github.com/TellH/GitClub) -An elegent Android Client for Github. 不仅仅是Github客户端，而且是一个发现优秀Github开源项目的app
  * [vpaliyX/Melophile](https://github.com/vpaliyX/Melophile) -Music App built using RxJava2, Retrofit2, Dagger2 and clean architecture.
  * [MinardWu/See](https://github.com/MinardWu/See) -“初见”客户端
+ * [jenly1314/KingTV](https://github.com/jenly1314/KingTV) - 高仿全民直播（全民TV），项目采用 MVP + RXJava + Retrofit + OKHttp + Material Design + Dagger2 + Base + Glide + GreenDao构建。
  *
 
 ### Kotlin
