--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -55,6 +55,9 @@
  * [vpaliyX/Melophile](https://github.com/vpaliyX/Melophile) -Music App built using RxJava2, Retrofit2, Dagger2 and clean architecture.
  * [MinardWu/See](https://github.com/MinardWu/See) -“初见”客户端
  * [jenly1314/KingTV](https://github.com/jenly1314/KingTV) - 高仿全民直播（全民TV），项目采用 MVP + RXJava + Retrofit + OKHttp + Material Design + Dagger2 + Base + Glide + GreenDao构建。
+ * [SuperMan42/MVP](https://github.com/SuperMan42/MVP) - 全民直播 + 高德选址
+ * [452MJ/C9MJ](https://github.com/452MJ/C9MJ) - 斗鱼douyu/熊猫panda/战旗zhanqi/虎牙huya/龙珠longhzu/全民quanmin/网易cc/火猫huomao + 英雄联盟LOL/守望先锋OW/DOTA2/炉石传说hs/CSGO
+ * [Leavessilent/QuanMinTV](https://github.com/Leavessilent/QuanMinTV) - 基于RxJava + Retrofit + MVP + ijkplayer 开发的仿全民TV，仅供学习使用，侵权立删。
  *
 
 ### Kotlin
