--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -58,6 +58,7 @@
  * [SuperMan42/MVP](https://github.com/SuperMan42/MVP) - 全民直播 + 高德选址
  * [452MJ/C9MJ](https://github.com/452MJ/C9MJ) - 斗鱼douyu/熊猫panda/战旗zhanqi/虎牙huya/龙珠longhzu/全民quanmin/网易cc/火猫huomao + 英雄联盟LOL/守望先锋OW/DOTA2/炉石传说hs/CSGO
  * [Leavessilent/QuanMinTV](https://github.com/Leavessilent/QuanMinTV) - 基于RxJava + Retrofit + MVP + ijkplayer 开发的仿全民TV，仅供学习使用，侵权立删。
+ * [HotBitmapGG/bilibili-android-client](https://github.com/HotBitmapGG/bilibili-android-client) - An unofficial bilibili client for android http://www.jianshu.com/p/f69a55b94c05
  *
 
 ### Kotlin
