--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -74,11 +74,11 @@
  * [Polidea/RxAndroidBle](https://github.com/Polidea/RxAndroidBle)——RxAndroidBle is a powerful painkiller for Android's Bluetooth Low Energy headaches
 
 ### 工具
- * [orhanobut/logger](https://github.com/orhanobut/logger)——Simple, pretty and powerful logger for android
- * [ZhaoKaiQiang/KLog](https://github.com/ZhaoKaiQiang/KLog)——这是一个Android专用的LogCat工具，主要功能为打印行号、函数调用、Json解析、XML解析、点击跳转、Log信息保存等功能
- * [square/leakcanary](https://github.com/square/leakcanary)——A memory leak detection library for Android and Java.
+ * [vondear/RxTools](https://github.com/vondear/RxTools)——Android开发人员不得不收集的工具类集合
  * [Blankj/AndroidUtilCode](https://github.com/Blankj/AndroidUtilCode)——Android developers should collect the following utils(updating) http://www.jianshu.com/p/72494773aace
  * [AbrahamCaiJin/CommonUtilLibrary](https://github.com/AbrahamCaiJin/CommonUtilLibrary)——快速开发工具类收集
+ * [orhanobut/logger](https://github.com/orhanobut/logger)——Simple, pretty and powerful logger for android
+ * [square/leakcanary](https://github.com/square/leakcanary)——A memory leak detection library for Android and Java.
  * [zxing/zxing](https://github.com/zxing/zxing)——ZXing ("Zebra Crossing") barcode scanning library for Java, Android
  * [promeG/TinyPinyin](https://github.com/promeG/TinyPinyin)——适用于Java和Android的快速、低内存占用的汉字转拼音库。(updating) http://www.jianshu.com/p/72494773aace
  * [yanzhenjie/AndPermission](https://github.com/yanzhenjie/AndPermission)——Android Permission = AndPermission. Android运行时权限管理最佳实践。 http://blog.csdn.net/yanzhenjie1003/a…(updating) http://www.jianshu.com/p/72494773aace
@@ -94,20 +94,17 @@
  * [crazycodeboy/TakePhoto](https://github.com/crazycodeboy/TakePhoto)—— 一款用于在Android设备上获取照片（拍照或从相册、文件中选择）、裁剪图片、压缩图片的开源工具库 http://www.devio.org/tags/#TakePhoto
 
 ### UI
-
 #### RecyclerView
  * [Jude95/EasyRecyclerView](https://github.com/Jude95/EasyRecyclerView)——ArrayAdapter,pull to refresh,auto load more,Header/Footer,EmptyView,ProgressView,ErrorView , RecyclerView, GridView and SwipeRefreshLayout.
  * [jianghejie/XRecyclerView](https://github.com/jianghejie/XRecyclerView)——a RecyclerView that implements pullrefresh and loadingmore featrues.you can use it like a standard RecyclerView , RecyclerView, GridView and SwipeRefreshLayout.
- * [CymChad/BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper)——一个强大的RecyclerAdapter框架，它能节约开发者大量的开发时间，集成了大部分列表常用需求解决方案。
-
+ * [CymChad/BaseRecyclerViewAdapterHelper](https://github.com/CymChad/BaseRecyclerViewAdapterHelper)——一个强大的RecyclerAdapter框架，它能节约开发者大量的开发时间，集成了大部分列表常用需求解决方案。 
+ 
 #### 下拉刷新
  * [scwang90/SmartRefreshLayout](https://github.com/scwang90/SmartRefreshLayout)——Android智能下拉刷新框架，支持越界回弹，集成了几十种炫酷的Header和 Footer。 RefreshLayout，OverScroll
  * [Chanven/CommonPullToRefresh](https://github.com/Chanven/CommonPullToRefresh)——Android widget with pull to refresh for all the views,and support loadMore for ListView , RecyclerView, GridView and SwipeRefreshLayout.
  * [liaohuqiu/android-Ultra-Pull-To-Refresh](https://github.com/liaohuqiu/android-Ultra-Pull-To-Refresh)——Ultra Pull to Refresh for Android. Support all the views.
  * [liaoinstan/SpringView](https://github.com/liaoinstan/SpringView)——A custom view can pull up and down,support ScrollView,ListView,RecyclerView,WebView and all another views, easy to use
-
  * [ogaclejapan/SmartTabLayout](https://github.com/ogaclejapan/SmartTabLayout)——A custom ViewPager title strip which gives continuous feedback to the user when scrolling
-
  * [youth5201314/banner](https://github.com/youth5201314/banner)——Android广告图片轮播控件，支持无限循环和多种主题，可以灵活设置轮播样式、动画、轮播和切换时间、位置、图片加载框架等！
  * [hugeterry/CoordinatorTabLayout](https://github.com/hugeterry/CoordinatorTabLayout)——Combination of TabLayout and CoordinatorLayout./TabLayout和CoordinatorLayout相结合的折叠控件
  * [qstumn/BadgeView](https://github.com/qstumn/BadgeView)——一个可以自由定制外观、支持拖拽消除的MaterialDesign风格Android BadgeView
