--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -60,6 +60,7 @@
  * [Leavessilent/QuanMinTV](https://github.com/Leavessilent/QuanMinTV) - 基于RxJava + Retrofit + MVP + ijkplayer 开发的仿全民TV，仅供学习使用，侵权立删。
  * [HotBitmapGG/bilibili-android-client](https://github.com/HotBitmapGG/bilibili-android-client) - An unofficial bilibili client for android http://www.jianshu.com/p/f69a55b94c05
  * [zhangliangming/HappyPlayer5](https://github.com/zhangliangming/HappyPlayer5) - 乐乐音乐5.0主要是基于ijkplayer框架开发的Android音乐播放器，它支持多种音频格式(mp3,ape,flac等)和动感歌词(ksc,krc,hrcs等)、翻译和音译歌词，界面高仿酷狗。
+ * [iMeiji/Toutiao](https://github.com/iMeiji/Toutiao) - 一款第三方今日头条客户端, MVP + RxJava + Retrofit
  *
 
 ### Kotlin
