--- a/Android/博文收集.md
+++ b/Android/博文收集.md
@@ -1,3 +1,5 @@
 # 资料
- * [那些年Android黑科技①:只要活着，就有希望](http://www.jianshu.com/p/cb2deed0f2d8) - android应用内执行shell、双进程保活aidl版、双进程保活jni版、保活JobService版
+ * [android应用进程保活](http://www.jianshu.com/p/cb2deed0f2d8) - android应用内执行shell、双进程保活aidl版、双进程保活jni版、保活JobService版
+ * [Android 屏幕适配方案](http://blog.csdn.net/lmj623565791/article/details/45460089)
+ * [Android 屏幕适配之dimens适配](http://blog.csdn.net/github_2011/article/details/72636851)
 
