--- a/Android/常用开源库.md
+++ b/Android/常用开源库.md
@@ -81,6 +81,8 @@
 
  * [ogaclejapan/SmartTabLayout](https://github.com/ogaclejapan/SmartTabLayout)——A custom ViewPager title strip which gives continuous feedback to the user when scrolling
 
+ * [yipianfengye/android-adDialog](https://github.com/yipianfengye/android-adDialog)一个简单，强大的广告活动弹窗控件
+
  * [youth5201314/banner](https://github.com/youth5201314/banner)——Android广告图片轮播控件，支持无限循环和多种主题，可以灵活设置轮播样式、动画、轮播和切换时间、位置、图片加载框架等！
  * [hugeterry/CoordinatorTabLayout](https://github.com/hugeterry/CoordinatorTabLayout)——Combination of TabLayout and CoordinatorLayout./TabLayout和CoordinatorLayout相结合的折叠控件
  * [qstumn/BadgeView](https://github.com/qstumn/BadgeView)——一个可以自由定制外观、支持拖拽消除的MaterialDesign风格Android BadgeView
