--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -42,4 +42,5 @@
  * [geeeeeeeeek/WeChatLuckyMoney](https://github.com/geeeeeeeeek/WeChatLuckyMoney) -微信抢红包插件
  * [lendylongli/qianghongbao](https://github.com/lendylongli/qianghongbao) -微信抢红包外挂源码
  * [wuyinlei/InternetShopping](https://github.com/wuyinlei/InternetShopping) -一个高仿京东商城的购物app，可以学习到5.0新特性。
+ * [AndroidMsky/WXhongbao](https://github.com/AndroidMsky/WXhongbao)自动领取微信红包,支持锁屏聊天界面等各种情况目前为6.3.32稳定支持版本。
  *
