--- a/Android/资料收集.md
+++ b/Android/资料收集.md
@@ -6,7 +6,8 @@
  * [RxjavaRetrofitDemo](https://github.com/tough1985/RxjavaRetrofitDemo) - Retrofit与Rxjava结合的实例
  * [T-MVP](https://github.com/north2014/T-MVP) - 泛型深度解耦下的MVP大瘦身 
  * [u2020](https://github.com/JakeWharton/u2020) - A sample Android app which showcases advanced usage of Dagger among other open source libraries. 
- * 
+ * [1sters/material_design_zh](https://github.com/1sters/material_design_zh)Material Design 中文协同翻译 - design.1sters.com http://design.1sters.com
+ *
  * [androidProject](https://github.com/yipianfengye/androidProject)——android产品研发过程中常用的技术，技巧，实践等
  * [Android-Tips](https://github.com/tangqi92/Android-Tips)——An awesome list of tips for android. http://itangqi.me/2015/09/14/android-tips
  * [android-dev-cn](https://github.com/android-cn/android-dev-cn) - 一些国内 Android 开发者信息，欢迎提交修改
@@ -16,6 +17,7 @@
  * [android_library](https://github.com/codedavid/android_library) - 收藏库
  * [android-art](https://github.com/hwding/android-art)——安卓设计相关的在线工具：包括图标制作、配色方案、尺寸修改、截图加壳等，持续更新中……
  * [LearningNotes](https://github.com/GeniusVJR/LearningNotes)——Enjoy Learning.
+ * [GcsSloop/AndroidNote](https://github.com/GcsSloop/AndroidNote)安卓学习笔记
  * [chrome-plugin-recommand](https://github.com/jiang111/chrome-plugin-recommand)——chrome-plugin-recommand 程序员必备的那些Chrome插件
  * [awesome-androidstudio-plugins](https://github.com/jiang111/awesome-androidstudio-plugins)——收集Android studio 常用的插件
  * [practical-programming-books](https://github.com/EZLippi/practical-programming-books)——这里收录比较实用的计算机相关技术书籍，可以在短期之内入门的简单实用教程、一些技术网站以及一些写的比较好的博文，欢迎Fork，你也可以通过Pull Request参与编辑。
@@ -30,6 +32,7 @@
  * [desmond1121/Fresco-Source-Analysis](https://github.com/desmond1121/Fresco-Source-Analysis)中文的Fresco源码解读
  * [soyoungboy/Volley](https://github.com/soyoungboy/Volley)Volley框架，添加注释，方便解读和学习
  * [JackyAndroid/AndroidInterview-Q-A](https://github.com/JackyAndroid/AndroidInterview-Q-A)The top Internet companies android interview questions and answers
+ * [yipianfengye/androidProject](https://github.com/yipianfengye/androidProject)android产品研发过程中常用的技术，技巧，实践等
  *
  *
  * [Android-InterView](https://github.com/paceboy/Android-InterView) - android 面试汇总
