--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -64,6 +64,7 @@
  * [iMeiji/Toutiao](https://github.com/iMeiji/Toutiao) - 一款第三方今日头条客户端, MVP + RxJava + Retrofit
  * [Horrarndoo/YiZhi](https://github.com/Horrarndoo/YiZhi) - MVP+RxJava2+Retrofit2+Glide+Rxbus，主要实现日报、新闻、干货、影视等资讯，个人项目
  * [yangchong211/LifeHelper](https://github.com/yangchong211/LifeHelper) - 综合案例训练，包含新闻，视频，图片，音乐，记事本等等模块。采用MVP+Rx+Retrofit+Desgin+Dagger2+阿里VLayout+腾讯X5等架构模式。
+  * [Rayhahah/EasySports]https://github.com/Rayhahah/EasySports) - 一款资讯类应用~~~o(*￣▽￣*)ブ，MVP+Retrofit+Rxjava
  *
 
 ### Kotlin
