--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -78,4 +78,5 @@
  * [LRH1993/Eyepetizer-in-Kotlin](https://github.com/LRH1993/Eyepetizer-in-Kotlin) -使用Kotlin撸一款Eyepetizer，学习Kotlin语言
  * [SplashCodes/JAViewer](https://github.com/SplashCodes/JAViewer) -质感设计 更优雅的驾车体验
  * [Ccixyj/JBusDriver](https://github.com/Ccixyj/JBusDriver) -这是去幼儿园的班车(滑稽
+ * [Will-Ls/WeiYueKotlin](https://github.com/Will-Ls/WeiYueKotlin) -一款 kotlin 新闻客户端, MVP + RxJava + Retrofit + Dagger2
 
