--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -66,6 +66,7 @@
  * [yangchong211/LifeHelper](https://github.com/yangchong211/LifeHelper) - 综合案例训练，包含新闻，视频，图片，音乐，记事本等等模块。采用MVP+Rx+Retrofit+Desgin+Dagger2+阿里VLayout+腾讯X5等架构模式。
  * [Rayhahah/EasySports](https://github.com/Rayhahah/EasySports) - 一款资讯类应用
  * [OCNYang/QBox](https://github.com/OCNYang/QBox) - 新闻资讯；微信精选美文；笑话趣图；星座运势；LED字幕；天气；日历；二维码；手电筒；老黄历
+ * [ruzhan123/awaker](https://github.com/ruzhan123/awaker) - 地理杂志阅读类Android App，项目采用 LiveData + Room + RXJava2 + Retrofit + OKHttp + Material Design + Base + Glide 构建
 
 ### Kotlin
  * [wuapnjie/PoiShuhui-Kotlin](https://github.com/wuapnjie/PoiShuhui-Kotlin) -一个用Kotlin写的简单漫画APP
