--- a/Android/资料收集.md
+++ b/Android/资料收集.md
@@ -24,19 +24,21 @@
  * [awesome-androidstudio-plugins](https://github.com/jiang111/awesome-androidstudio-plugins)——收集Android studio 常用的插件
  * [practical-programming-books](https://github.com/EZLippi/practical-programming-books)——这里收录比较实用的计算机相关技术书籍，可以在短期之内入门的简单实用教程、一些技术网站以及一些写的比较好的博文，欢迎Fork，你也可以通过Pull Request参与编辑。
  * [android-open-project-analysis](https://github.com/android-cn/android-open-project-analysis)——Analysis implementation of android open      source project, 微信公众号:codekk, 网站: http://a.codekk.com
- *
+ * [biezhi/30-seconds-of-java8](https://github.com/biezhi/30-seconds-of-java8#%E7%9B%AE%E5%BD%95)—— 30秒收集有用的Java8代码片段
+ 
+ 
  * [droidicon](https://github.com/theDazzler/droidicon)——Over 1600 customizable icons for Android including 750+ Google Material Design icons, 25 ready-made social badges, and more!
  * [androidicons](https://github.com/opoloo/androidicons)——Androidicons is a professional, handcrafted icon set with 250 icons in 14 different colors and 5 sizes, including an icon font and all sources. http://www.androidicons.com
  * [android-material-design-icon-generator-plugin](https://github.com/konifar/android-material-design-icon-generator-plugin)——This plugin help you to set material design icon to your project.
  * [Android-Iconics](https://github.com/mikepenz/Android-Iconics)——Android-Iconics - Use any icon font, or vector (.svg) as drawable in your application. http://mikepenz.github.io/Android-Iconics
  * [android-iconify](https://github.com/JoanZapata/android-iconify)——Android integration of multiple icon providers such as FontAwesome, Entypo, Typicons,... http://joanzapata.com/android-iconify
- *
+ 
  * [desmond1121/Fresco-Source-Analysis](https://github.com/desmond1121/Fresco-Source-Analysis)中文的Fresco源码解读
  * [soyoungboy/Volley](https://github.com/soyoungboy/Volley)Volley框架，添加注释，方便解读和学习
  * [JackyAndroid/AndroidInterview-Q-A](https://github.com/JackyAndroid/AndroidInterview-Q-A)The top Internet companies android interview questions and answers
  * [yipianfengye/androidProject](https://github.com/yipianfengye/androidProject)android产品研发过程中常用的技术，技巧，实践等
- *
- *
+ 
+ 
  * [Android-InterView](https://github.com/paceboy/Android-InterView) - android 面试汇总
  * [Android-Interview](https://github.com/solaris0403/Android-Interview) - Android面试题大全
  * 
