--- a/Android/资料收集.md
+++ b/Android/资料收集.md
@@ -37,6 +37,7 @@
  * [yipianfengye/androidProject](https://github.com/yipianfengye/androidProject)android产品研发过程中常用的技术，技巧，实践等
 -
 -
- * [Android-InterView](https://github.com/paceboy/Android-InterView) - android 面试汇总
- * [Android-Interview](https://github.com/solaris0403/Android-Interview) - Android面试题大全
+ * [paceboy/Android-InterView](https://github.com/paceboy/Android-InterView) - android 面试汇总
+ * [solaris0403/Android-Interview](https://github.com/solaris0403/Android-Interview) - Android面试题大全
+ * [CyC2018/InterviewNotes](https://github.com/CyC2018/InterviewNotes) - 面试笔记
  * 
