--- a/Android/项目收集.md
+++ b/Android/项目收集.md
@@ -80,4 +80,4 @@
  * [SplashCodes/JAViewer](https://github.com/SplashCodes/JAViewer) -质感设计 更优雅的驾车体验
  * [Ccixyj/JBusDriver](https://github.com/Ccixyj/JBusDriver) -这是去幼儿园的班车(滑稽
  * [Will-Ls/WeiYueKotlin](https://github.com/Will-Ls/WeiYueKotlin) -一款 kotlin 新闻客户端, MVP + RxJava + Retrofit + Dagger2
-
+ * [git-xuhao/KotlinMvp](https://github.com/git-xuhao/KotlinMvp) -基于Kotlin+MVP+Retrofit+RxJava+Glide 等架构实现的短视频类的APP练手项目，UI 简约风格
