--- a/Android/项目.md
+++ b/Android/项目.md
@@ -68,6 +68,7 @@
  * [OCNYang/QBox](https://github.com/OCNYang/QBox) - 新闻资讯；微信精选美文；笑话趣图；星座运势；LED字幕；天气；日历；二维码；手电筒；老黄历
  * [ruzhan123/awaker](https://github.com/ruzhan123/awaker) - 地理杂志阅读类Android App，项目采用 LiveData + Room + RXJava2 + Retrofit + OKHttp + Material Design + Base + Glide 构建
  * [techGay/91porn](https://github.com/techGay/91porn) - 91Porn Android 客户端，突破游客每天观看10次视频的限制，还可以下载视频
+ * [ditclear/PaoNet](https://github.com/ditclear/PaoNet) - 【MVVM+RxJava2+AspectJ】泡网第三方客户端 http://www.jcodecraeer.com/
 
 ### Kotlin
  * [wuapnjie/PoiShuhui-Kotlin](https://github.com/wuapnjie/PoiShuhui-Kotlin) -一个用Kotlin写的简单漫画APP
