--- a/Android/项目.md
+++ b/Android/项目.md
@@ -14,7 +14,6 @@
  * [huabanDemo](https://github.com/LiCola/huabanDemo) - MD版的花瓣网App
  * [MicroReader](https://github.com/YiuChoi/MicroReader) - 一个小而美的阅读客户端
  * [OuNews](https://github.com/oubowu/OuNews) - 新闻阅读
- * [ZhiHuMVP](https://github.com/fangx/ZhiHuMVP) - 采用MVP架构的仿知乎APP
  * [FanXin2.0_IM](https://github.com/huangfangyi/FanXin2.0_IM) -  超仿微信 android项目 IM
  * [SimplifyReader](https://github.com/SkillCollege/SimplifyReader) - 一款基于Google Material Design设计开发的Android客户端，包括新闻简读，图片浏览，视频爽看 ，音乐轻听以及二维码扫描五个子模块。项目采取的是MVP架构开发，
  * [Meizhi](https://github.com/drakeet/Meizhi) - gank.io unofficial client, RxJava & Retrofit
@@ -37,7 +36,6 @@
  * [youlookwhat/CloudReader](https://github.com/youlookwhat/CloudReader) - 云阅：一款基于网易云音乐UI，使用Gank.Io及豆瓣api开发的符合Google Material Design的Android开源项目。项目采取的是MVVM-DataBinding架构开发，现主要包括：干货区、电影区和书籍区三个子模块。DIY网易云音乐原来是如此Cool~ https://github.com/youlookwhat/CloudR…
  * [HuTianQi/QQ](https://github.com/HuTianQi/QQ) - 一款高仿腾讯QQ的IM软件，主UI框架采用侧滑菜单+底部导航的方式，核心聊天功能基于bmob SDK，已经实现文本，表情，图片，位置，语音等信息的发送
  * [HuTianQi/YingBeautyNote](https://github.com/HuTianQi/YingBeautyNote) - 一款类似印象笔记的App，随时记录您的生活点滴，欢迎大家follow，star与fork。
- * [a371166028/likequanmintv](https://github.com/a371166028/likequanmintv) - 基于MVP的Retrofit2(okhttp3)+rxjava+dagger2+greendao+glide+rtmp直播。该项目系仿全民TV,属于独立开发者作品,仅供参考学习，拒绝做一切商业用途，如有侵权，请告知删除
  * [GitLqr/LQRWeChat](https://github.com/GitLqr/LQRWeChat) - 本项目高仿微信6.3.31，使用网易云信SDK 3.2.0版本完成主要的聊天功能（单聊、群聊）、好友关系管理、群组管理等功能。
  * [BaronZ88/MinimalistWeather](https://github.com/BaronZ88/MinimalistWeather) - Android 平台开源天气 App，采用 MVP、RxJava、Retrofit2、OKHttp3、Dagger2、RetroLambda 等开源库来实现。 https://zhuanlan.zhihu.com/baron
  * [geeeeeeeeek/WeChatLuckyMoney](https://github.com/geeeeeeeeek/WeChatLuckyMoney) -微信抢红包插件
@@ -45,7 +43,6 @@
  * [wuyinlei/InternetShopping](https://github.com/wuyinlei/InternetShopping) -一个高仿京东商城的购物app，可以学习到5.0新特性。
  * [AndroidMsky/WXhongbao](https://github.com/AndroidMsky/WXhongbao)自动领取微信红包,支持锁屏聊天界面等各种情况目前为6.3.32稳定支持版本。
  * [LRH1993/SmartRecom](https://github.com/LRH1993/SmartRecom) -一款基于行为识别和个性化推荐的智能推荐APP，实时为你推荐音乐和电影，让你的生活更休闲，更精彩！
- * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
  * [maoruibin/TranslateApp](https://github.com/maoruibin/TranslateApp) -A translations app without interruptions, copy words and translate directly, show result by top view. http://fir.im/gdTranslater
  * [aliumujib/Orin](https://github.com/aliumujib/Orin) -Orin is a music player based on Karim Abou Zeid's open source Phonograph music player
  * [OCNYang/QBox](https://github.com/OCNYang/QBox) -小秋魔盒是一个生活工具 App，主要功能有：新闻资讯；微信精选美文；笑话趣图；星座运势；LED字幕；天气；日历；二维码；手电筒；老黄历。在开发中尽可能多的用了目前比较流行的框架和库。
@@ -55,13 +52,10 @@
  * [TellH/GitClub](https://github.com/TellH/GitClub) -An elegent Android Client for Github. 不仅仅是Github客户端，而且是一个发现优秀Github开源项目的app
  * [vpaliyX/Melophile](https://github.com/vpaliyX/Melophile) -Music App built using RxJava2, Retrofit2, Dagger2 and clean architecture.
  * [MinardWu/See](https://github.com/MinardWu/See) -“初见”客户端
- * [jenly1314/KingTV](https://github.com/jenly1314/KingTV) - 高仿全民直播（全民TV），项目采用 MVP + RXJava + Retrofit + OKHttp + Material Design + Dagger2 + Base + Glide + GreenDao构建。
  * [SuperMan42/MVP](https://github.com/SuperMan42/MVP) - 全民直播 + 高德选址
  * [452MJ/C9MJ](https://github.com/452MJ/C9MJ) - 斗鱼douyu/熊猫panda/战旗zhanqi/虎牙huya/龙珠longhzu/全民quanmin/网易cc/火猫huomao + 英雄联盟LOL/守望先锋OW/DOTA2/炉石传说hs/CSGO
- * [Leavessilent/QuanMinTV](https://github.com/Leavessilent/QuanMinTV) - 基于RxJava + Retrofit + MVP + ijkplayer 开发的仿全民TV，仅供学习使用，侵权立删。
  * [HotBitmapGG/bilibili-android-client](https://github.com/HotBitmapGG/bilibili-android-client) - An unofficial bilibili client for android http://www.jianshu.com/p/f69a55b94c05
  * [zhangliangming/HappyPlayer5](https://github.com/zhangliangming/HappyPlayer5) - 乐乐音乐5.0主要是基于ijkplayer框架开发的Android音乐播放器，它支持多种音频格式(mp3,ape,flac等)和动感歌词(ksc,krc,hrcs等)、翻译和音译歌词，界面高仿酷狗。
- * [iMeiji/Toutiao](https://github.com/iMeiji/Toutiao) - 一款第三方今日头条客户端, MVP + RxJava + Retrofit
  * [Horrarndoo/YiZhi](https://github.com/Horrarndoo/YiZhi) - MVP+RxJava2+Retrofit2+Glide+Rxbus，主要实现日报、新闻、干货、影视等资讯，个人项目
  * [yangchong211/LifeHelper](https://github.com/yangchong211/LifeHelper) - 综合案例训练，包含新闻，视频，图片，音乐，记事本等等模块。采用MVP+Rx+Retrofit+Desgin+Dagger2+阿里VLayout+腾讯X5等架构模式。
  * [Rayhahah/EasySports](https://github.com/Rayhahah/EasySports) - 一款资讯类应用
@@ -69,6 +63,13 @@
  * [ruzhan123/awaker](https://github.com/ruzhan123/awaker) - 地理杂志阅读类Android App，项目采用 LiveData + Room + RXJava2 + Retrofit + OKHttp + Material Design + Base + Glide 构建
  * [techGay/91porn](https://github.com/techGay/91porn) - 91Porn Android 客户端，突破游客每天观看10次视频的限制，还可以下载视频
  * [ditclear/PaoNet](https://github.com/ditclear/PaoNet) - 【MVVM+RxJava2+AspectJ】泡网第三方客户端 http://www.jcodecraeer.com/
+## MVP
+ * [iMeiji/Toutiao](https://github.com/iMeiji/Toutiao) - 一款第三方今日头条客户端, MVP + RxJava + Retrofit
+ * [Leavessilent/QuanMinTV](https://github.com/Leavessilent/QuanMinTV) - 基于RxJava + Retrofit + MVP + ijkplayer 开发的仿全民TV，仅供学习使用，侵权立删。
+ * [jenly1314/KingTV](https://github.com/jenly1314/KingTV) - 高仿全民直播（全民TV），项目采用 MVP + RXJava + Retrofit + OKHttp + Material Design + Dagger2 + Base + Glide + GreenDao构建。
+ * [a371166028/likequanmintv](https://github.com/a371166028/likequanmintv) - 基于MVP的Retrofit2(okhttp3)+rxjava+dagger2+greendao+glide+rtmp直播。该项目系仿全民TV,属于独立开发者作品,仅供参考学习，拒绝做一切商业用途，如有侵权，请告知删除
+ * [ZhiHuMVP](https://github.com/fangx/ZhiHuMVP) - 采用MVP架构的仿知乎APP
+ * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
 
 ### Kotlin
  * [wuapnjie/PoiShuhui-Kotlin](https://github.com/wuapnjie/PoiShuhui-Kotlin) -一个用Kotlin写的简单漫画APP
