--- a/Android/项目.md
+++ b/Android/项目.md
@@ -69,6 +69,7 @@
  * [jenly1314/KingTV](https://github.com/jenly1314/KingTV) - 高仿全民直播（全民TV），项目采用 MVP + RXJava + Retrofit + OKHttp + Material Design + Dagger2 + Base + Glide + GreenDao构建。
  * [a371166028/likequanmintv](https://github.com/a371166028/likequanmintv) - 基于MVP的Retrofit2(okhttp3)+rxjava+dagger2+greendao+glide+rtmp直播。该项目系仿全民TV,属于独立开发者作品,仅供参考学习，拒绝做一切商业用途，如有侵权，请告知删除
  * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
+ * [JsonChao/Awesome-WanAndroid](https://github.com/JsonChao/Awesome-WanAndroid) -致力于打造一款极致体验的 http://www.wanandroid.com/ 客户端，知识和美是可以并存的哦QAQn(*≧▽≦*)n
 
 
 
