--- a/Android/开发工具.md
+++ b/Android/开发工具.md
@@ -2,3 +2,4 @@
  * [RohitAwate/Everest](https://github.com/RohitAwate/Everest) - A beautiful and lightweight REST client built with JavaFX.网络请求工具
  * [chrome-plugin-recommand](https://github.com/jiang111/chrome-plugin-recommand)——chrome-plugin-recommand 程序员必备的那些Chrome插件
  * [awesome-androidstudio-plugins](https://github.com/jiang111/awesome-androidstudio-plugins)——收集Android studio 常用的插件
+ * [android-material-design-icon-generator-plugin](https://github.com/konifar/android-material-design-icon-generator-plugin)——This plugin help you to set material design icon to your project.
