--- a/Android/面试.md
+++ b/Android/面试.md
@@ -2,3 +2,5 @@
  * [paceboy/Android-InterView](https://github.com/paceboy/Android-InterView) - android 面试汇总
  * [solaris0403/Android-Interview](https://github.com/solaris0403/Android-Interview) - Android面试题大全
  * [CyC2018/InterviewNotes](https://github.com/CyC2018/InterviewNotes) - 面试笔记
+ * [crossoverJie/Java-Interview](https://github.com/crossoverJie/Java-Interview) - 多数是一些 Java 基础知识、底层原理、算法详解。也有上层应用设计，其中不乏一些大厂面试真题。
+ 
