--- a/Android/面试.md
+++ b/Android/面试.md
@@ -3,4 +3,5 @@
  * [solaris0403/Android-Interview](https://github.com/solaris0403/Android-Interview) - Android面试题大全
  * [CyC2018/InterviewNotes](https://github.com/CyC2018/InterviewNotes) - 面试笔记
  * [crossoverJie/Java-Interview](https://github.com/crossoverJie/Java-Interview) - 多数是一些 Java 基础知识、底层原理、算法详解。也有上层应用设计，其中不乏一些大厂面试真题。
+ * [CyC2018/Interview-Notebook](https://github.com/CyC2018/Interview-Notebook) - 技术面试需要掌握的基础知识整理，欢迎编辑~
  
