--- a/Android/项目.md
+++ b/Android/项目.md
@@ -63,6 +63,9 @@
  * [ruzhan123/awaker](https://github.com/ruzhan123/awaker) - 地理杂志阅读类Android App，项目采用 LiveData + Room + RXJava2 + Retrofit + OKHttp + Material Design + Base + Glide 构建
  * [techGay/91porn](https://github.com/techGay/91porn) - 91Porn Android 客户端，突破游客每天观看10次视频的限制，还可以下载视频
  * [ditclear/PaoNet](https://github.com/ditclear/PaoNet) - 【MVVM+RxJava2+AspectJ】泡网第三方客户端 http://www.jcodecraeer.com/
+ * [LiangLuDev/WeYueReader](https://github.com/LiangLuDev/WeYueReader) - Android开源项目-微Yue电子书阅读（MD设计）
+ 
+ 
 ##### MVP
  * [iMeiji/Toutiao](https://github.com/iMeiji/Toutiao) - 一款第三方今日头条客户端, MVP + RxJava + Retrofit
  * [Leavessilent/QuanMinTV](https://github.com/Leavessilent/QuanMinTV) - 基于RxJava + Retrofit + MVP + ijkplayer 开发的仿全民TV，仅供学习使用，侵权立删。
@@ -70,7 +73,7 @@
  * [a371166028/likequanmintv](https://github.com/a371166028/likequanmintv) - 基于MVP的Retrofit2(okhttp3)+rxjava+dagger2+greendao+glide+rtmp直播。该项目系仿全民TV,属于独立开发者作品,仅供参考学习，拒绝做一切商业用途，如有侵权，请告知删除
  * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
  * [JsonChao/Awesome-WanAndroid](https://github.com/JsonChao/Awesome-WanAndroid) -致力于打造一款极致体验的 http://www.wanandroid.com/ 客户端，知识和美是可以并存的哦QAQn(*≧▽≦*)n
-
+ * [rogerou/Baby](https://github.com/rogerou/Baby) -一个私密社交APP,采用Dagger2+Rxjava+LeanCloud+环信+MVP+Tinker进行开发。
 
 
 ### Kotlin
