--- a/Android/项目.md
+++ b/Android/项目.md
@@ -74,6 +74,7 @@
  * [codeestX/GeekNews](https://github.com/codeestX/GeekNews) -A pure reading App based on Material Design + MVP + RxJava2 + Retrofit + Dagger2 + Realm + Glide
  * [JsonChao/Awesome-WanAndroid](https://github.com/JsonChao/Awesome-WanAndroid) -致力于打造一款极致体验的 http://www.wanandroid.com/ 客户端，知识和美是可以并存的哦QAQn(*≧▽≦*)n
  * [rogerou/Baby](https://github.com/rogerou/Baby) -一个私密社交APP,采用Dagger2+Rxjava+LeanCloud+环信+MVP+Tinker进行开发。
+ * [TeamNB/FakeBiliBili](https://github.com/TeamNB/FakeBiliBili) -仿B站Android端项目
 
 
 ### Kotlin
