--- a/Android/项目.md
+++ b/Android/项目.md
@@ -90,3 +90,6 @@
  * [Ccixyj/JBusDriver](https://github.com/Ccixyj/JBusDriver) -这是去幼儿园的班车(滑稽
  * [Will-Ls/WeiYueKotlin](https://github.com/Will-Ls/WeiYueKotlin) -一款 kotlin 新闻客户端, MVP + RxJava + Retrofit + Dagger2
  * [git-xuhao/KotlinMvp](https://github.com/git-xuhao/KotlinMvp) -基于Kotlin+MVP+Retrofit+RxJava+Glide 等架构实现的短视频类的APP练手项目，UI 简约风格
+ 
+ ### Flutter--Dart
+ * [hekaiyou/talk_casually](https://github.com/hekaiyou/talk_casually) -使用Flutter框架和Firebase平台开发的实时聊天APP
