--- a/Android/项目.md
+++ b/Android/项目.md
@@ -93,3 +93,4 @@
  
  ### Flutter--Dart
  * [hekaiyou/talk_casually](https://github.com/hekaiyou/talk_casually) -使用Flutter框架和Firebase平台开发的实时聊天APP
+ * [konifar/droidkaigi2018-flutter](https://github.com/konifar/droidkaigi2018-flutter) -The unofficial conference app for DroidKaigi 2018 Tokyo
