--- a/Android/资料.md
+++ b/Android/资料.md
@@ -27,5 +27,7 @@
  * [desmond1121/Fresco-Source-Analysis](https://github.com/desmond1121/Fresco-Source-Analysis)中文的Fresco源码解读
  * [soyoungboy/Volley](https://github.com/soyoungboy/Volley)Volley框架，添加注释，方便解读和学习
  * [JackyAndroid/AndroidInterview-Q-A](https://github.com/JackyAndroid/AndroidInterview-Q-A)The top Internet companies android interview questions and answers
- * [yipianfengye/androidProject](https://github.com/yipianfengye/androidProject)android产品研发过程中常用的技术，技巧，实践等
+ * [yipianfengye/androidProject](https://github.com/yipianfengye/androidProject)--android产品研发过程中常用的技术，技巧，实践等
 
+
+ * [heimashi/kotlin_tips](https://github.com/heimashi/kotlin_tips)--用Kotlin去提高生产力:汇总Kotlin相对于Java的优势，以及怎么用Kotlin去简洁、务实、高效、安全开发的Tips
