--- a/Android/项目.md
+++ b/Android/项目.md
@@ -76,7 +76,6 @@
  * [rogerou/Baby](https://github.com/rogerou/Baby) -一个私密社交APP,采用Dagger2+Rxjava+LeanCloud+环信+MVP+Tinker进行开发。
  * [TeamNB/FakeBiliBili](https://github.com/TeamNB/FakeBiliBili) -仿B站Android端项目
 
-
 ### Kotlin
  * [wuapnjie/PoiShuhui-Kotlin](https://github.com/wuapnjie/PoiShuhui-Kotlin) -一个用Kotlin写的简单漫画APP
  * [githubwing/GankClient-Kotlin](https://github.com/githubwing/GankClient-Kotlin) -gank.io kotlin实现的干货集中营Android客户端 Kotlin Dagger Databinding Rxjava Retrofit Okhttp3
@@ -90,7 +89,8 @@
  * [Ccixyj/JBusDriver](https://github.com/Ccixyj/JBusDriver) -这是去幼儿园的班车(滑稽
  * [Will-Ls/WeiYueKotlin](https://github.com/Will-Ls/WeiYueKotlin) -一款 kotlin 新闻客户端, MVP + RxJava + Retrofit + Dagger2
  * [git-xuhao/KotlinMvp](https://github.com/git-xuhao/KotlinMvp) -基于Kotlin+MVP+Retrofit+RxJava+Glide 等架构实现的短视频类的APP练手项目，UI 简约风格
+ * [git-xuhao/KotlinMvp](https://github.com/git-xuhao/KotlinMvp) -一款 kotlin 新闻客户端, MVP + RxJava + Retrofit + Dagger2
  
  ### Flutter--Dart
  * [hekaiyou/talk_casually](https://github.com/hekaiyou/talk_casually) -使用Flutter框架和Firebase平台开发的实时聊天APP
- * [konifar/droidkaigi2018-flutter](https://github.com/konifar/droidkaigi2018-flutter) -The unofficial conference app for DroidKaigi 2018 Tokyo
+ * [konifar/droidkaigi2018-flutter](https://github.com/konifar/droidkaigi2018-flutter) -基于Kotlin+MVP+Retrofit+RxJava+Glide 等架构实现的短视频类的APP
