--- a/Android/组织.md
+++ b/Android/组织.md
@@ -2,4 +2,4 @@
  * [googlesamples](https://github.com/googlesamples)
  * [alibaba](https://github.com/alibaba)
  * [Flutter中文开发者](https://github.com/flutter-dev)
- 
+ * [极光开发者](https://github.com/jpush)
